# rally-cut

./: .gitignore  CLAUDE.md  Makefile  README.md  detection_output.json  pyproject.toml
analysis/: .gitignore  BEACH_VOLLEYBALL_EVALUATION.md  CLAUDE.md  README.md  baselines.json  pyproject.toml  rallycut.yaml  test_segments.py
analysis/backups/player_matching_gt/: 2026-04-08-182354.json
analysis/docs/: contact_detection_pipeline.md  detection_algorithm.md  video_normalization_analysis.md
analysis/docs/labeling/: net_top_endpoints.md
analysis/experiments/: eval_harness.py  pseudo_label_export.py
analysis/experiments/configs/: exp_action_rules.yaml  exp_ball_ssl.yaml  exp_ball_tracknet.yaml  exp_court_calib.yaml  exp_highlights.yaml  exp_player_hires.yaml
analysis/experiments/gold_labels/: 0af554b5-11cc-4404-aebe-d40cadf21d95_gold.csv  0d84f858-afad-4cdc-9f72-e88b4137c313_gold.csv  1bfcbc4f-64be-44e9-bc5a-1d20b78cca2e_gold.csv  73581b32-8207-42bb-9af7-12491fdbe65c_gold.csv  9dbe457a-af4c-463f-9a8d-eeb115384599_gold.csv  bd77efd1-612c-431d-8ead-c5be87fd0262_gold.csv
analysis/lib/volleyball_ml/: __init__.py  quantization.py  video_mae.py  yolo_detector.py
analysis/outputs/production_eval/: ablation_matrix_2026-04-10.md
analysis/rallycut/: __init__.py
analysis/rallycut/actions/: __init__.py  contact_decoder.py  sequence_dataset.py  trajectory_features.py  videomae_contact_head.py
analysis/rallycut/analysis/: game_state.py
analysis/rallycut/cli/: main.py  utils.py
analysis/rallycut/core/: __init__.py  config.py  hwaccel.py  models.py  profiler.py  proxy.py  video.py
analysis/rallycut/court/: __init__.py  calibration.py  camera_model.py  detector.py  keypoint_detector.py  line_geometry.py  net_line_estimator.py  net_top_keypoint_reader.py  net_top_regressor.py  player_constrained.py  trajectory_3d.py
analysis/rallycut/data/: contact_transitions.json
analysis/rallycut/evaluation/: __init__.py  attribution_bench.py  cached_analysis.py  calibration.py  corpus_freshness.py  db.py  ground_truth.py  gt_loader.py  matching.py  metrics.py  param_grid.py  sanity_checks.py  score_ground_truth.py  split.py  switch_loader.py  video_resolver.py
analysis/rallycut/labeling/: __init__.py  ground_truth.py  studio_client.py
analysis/rallycut/output/: overlay.py
analysis/rallycut/processing/: __init__.py  cutter.py  exporter.py
analysis/rallycut/quality/: __init__.py  beach_vb_classifier.py  camera_distance.py  camera_geometry.py  crowd_density.py  metadata.py  runner.py  shakiness.py  types.py
analysis/rallycut/scoring/: __init__.py  convention.py  cross_rally_viterbi.py  point_winner_detector.py
analysis/rallycut/service/: detection.py  local_runner.py  player_tracking_runner.py  s3_utils.py  schemas.py  storage.py  webhook_utils.py
analysis/rallycut/spotting/: __init__.py  config.py
analysis/rallycut/statistics/: aggregator.py  highlights.py  landing_detector.py  match_stats.py  (+1 more)
analysis/reports/: action_corpus_delta_pre_vs_post_gt_repair.md  action_detection_architecture_2026_04_17.md  action_detection_audit_2026_04_20.md  action_gt_decouple_2026_05_12.md  action_gt_freshness_2026_04_24.md  attribution_ballside_oracle_2026_04_23.md  ball_gap_diagnosis_2026_04_15.md  beach_vb_calibration_2026-04-15.json  block_diagnostic.json  block_rule_sweep.json  candidate_decoder_loo_2026_04_20.md  candidate_decoder_ship_memo_2026_04_20.md  candidate_decoder_sweep_2026_04_20.md  coherence_c5_baseline_2026_05_13.md  contact_baseline_loo_video_2026_04_19.md  contact_detector_at_net_fp_diagnostic_2026_05_14.md  contact_fn_phase3_categories_2026_04_21.md  contact_fn_phase4_counts_2026_04_21.md  contact_fn_phase5_hypotheses_2026_04_21.md  contact_fn_phase6_decision_memo_2026_04_21.md  contact_fn_visual_log_2026_04_21.md  crop_head_phase1_probe_2026-04-20.md  crop_head_phase2_0_killtest_2026_04_20.md  decoder_ab_2026_04_24.md  decoder_full_integration_2026_04_20.md  decoder_integration_2026_04_20.md  decoder_no_fsl_sweep_2026_04_20.md  decoder_phase3_baseline.md  decoder_phase3_decoder.md  decoder_phase4_2pass.md  decoder_phase4_synth.md  decoder_smoke_2026_04_24.md  decoder_smoke_2pass_2026_04_24.md  decoder_smoke_verdict_2026_04_24.md  decoder_v5_full_2026_04_24.md  decoder_v5_smoke_2026_04_24.md  dormant_flag_decisions_2026_04_24.md  empirical_transitions_2026_05_17.json  eval_loo_video_flag_off_2026_04_20.md  eval_loo_video_flag_on_2026_04_20.md  (+42 more)
analysis/scripts/: _apply_claude_verdicts_a3.py  _net_top_probe_fetch.py  _orth_negctl.py  _orth_tiny.py  _probe_mstcn_binary.py  _smoke_snapshot_gt.py  _upstream_probe_common.py  ab_test_track_split.py  ab_test_w4.sh  ablate_repair_rules.py  ablate_sequence_features.py  aggregate_upstream_bottleneck_2026_05_20.py  analyze_ball_3d_by_camera_height.py  analyze_ball_3d_session_short.py  analyze_block_tp_vs_fp.py  analyze_cascade_traces_2026_05_20.py  analyze_classification.py  analyze_error_anatomy.py  analyze_fn_rescue.py  analyze_missed_rallies.py  analyze_phase1_drift.py  analyze_rally_detection.py  analyze_sweep_and_pattern_c.py  analyze_team_accuracy.py  annotate_court_corners.py  audit_action_errors_2026_04_20.py  audit_action_gt_vs_click_gt.py  audit_action_sequence_anomalies.py  audit_ball_3d_tier1.py  audit_ball_filter.py  audit_cascade_override_2026_05_20.py  audit_coherence_trusted_29_2026_05_17.py  audit_fixture_gt.py  audit_gt_fn_contacts.py  audit_hough_fallback.py  audit_panel_gt_alignment.py  audit_side_switches.py  audit_team_assignment_errors.py  backfill_action_gt_trackid.py  backfill_ball_tracking.py  (+509 more)
analysis/tests/: __init__.py  conftest.py
analysis/training_datasets/: .gitignore  README.md
(+1105 files in other folders)
