[project]
name = "rallycut"
version = "0.1.0"
description = "Beach volleyball video analysis CLI - auto-cut dead time from recordings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "RallyCut Team" }
]
keywords = ["volleyball", "video", "analysis", "sports", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # CLI Framework
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    # ML/Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    # Video Processing
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "ffmpeg-python>=0.2.0",
    "scipy>=1.11.0",
    # Utilities
    "httpx>=0.25.0",
    "tqdm>=4.65.0",
    "platformdirs>=4.0.0",
    "gdown>=5.2.0",
    "onnx>=1.20.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.7",
    "boto3>=1.42.19",
    # Database (evaluation framework)
    "psycopg[binary]>=3.1.0",
    # Training
    "accelerate>=0.25.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
onnx = [
    # ONNX Runtime for faster inference (cross-platform)
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
]
gpu = [
    # GPU-specific optimizations
    "nvidia-ml-py>=12.0.0",
    "onnxruntime-gpu>=1.16.0",
    "av>=12.0.0",  # PyAV for NVDEC hardware decoding
]
hwaccel = [
    # Hardware-accelerated video decoding (cross-platform)
    "av>=12.0.0",  # PyAV for NVDEC (CUDA) / VideoToolbox (macOS)
]
openvino = [
    # Intel CPU optimization
    "openvino>=2023.0.0",
]
cloud = [
    # Cloud deployment (Modal)
    "modal>=0.64.0",
]

[project.scripts]
rallycut = "rallycut.cli.main:app"

[project.urls]
Homepage = "https://github.com/rallycut/rallycut"
Repository = "https://github.com/rallycut/rallycut"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rallycut", "lib"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:invalid escape sequence:SyntaxWarning:filterpy",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "types-pyyaml>=6.0.12.20250915",
]
